--- a/src/assets/header.css
+++ b/src/assets/header.css
@@ -1,8 +1,20 @@
-.header-body{
-    width: 100vw;
-    height: 4rem;
-    background-color:#E9E9E9;
-    color:#282C34;
-    display: flex;
-    align-items: center;
+.header-body {
+  width: 95vw;
+  height: 4rem;
+  background-color: #e9e9e9;
+  color: #282c34;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 3rem;
+}
+.history-icon {
+  color: rgba(0, 0, 0, 0.54);
+  cursor: pointer;
+  border-radius: 50%;
+  padding: 12px;
+}
+
+.history-icon:hover {
+  background-color: rgba(0, 0, 0, 0.1);
 }
