--- a/src/assets/header.css
+++ b/src/assets/header.css
@@ -1,12 +1,12 @@
 .header-body {
-  width: 95vw;
+  width: 100vw;
   height: 4rem;
   background-color: #e9e9e9;
   color: #282c34;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 0 3rem;
+  /* padding: 0 auto; */
 }
 .history-icon {
   color: rgba(0, 0, 0, 0.54);
@@ -17,4 +17,17 @@
 
 .history-icon:hover {
   background-color: rgba(0, 0, 0, 0.1);
+}
+
+.history-wrap {
+  max-width: 14em;
+}
+
+.app-title {
+  font-size: 0.9rem;
+  padding: 12px;
+}
+
+.MuiIconButton-root:hover {
+  background-color: rgba(0, 0, 0, 0.1) !important;
 }
