--- a/src/assets/calculatorView.css
+++ b/src/assets/calculatorView.css
@@ -14,6 +14,10 @@
   font-size: 2rem;
   font-weight: 600;
   margin: 0.5rem;
+  height: auto;
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
   transition: font-size 0.5s;
 }
 
