--- a/src/assets/calculatorButtons.css
+++ b/src/assets/calculatorButtons.css
@@ -7,6 +7,7 @@
   display: grid;
   grid-template-columns: repeat(4, auto);
   width: 100%;
+  height: 67vh;
 }
 
 .grid-item {
@@ -14,6 +15,7 @@
   padding: 20px;
   display: flex;
   justify-content: center;
+  align-self: center;
 }
 
 .grid-item:hover {
